correction of errors found in the three files

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <option/>
                     <option value="Birante">Birante</option>
                     <option value="Mamadou">Mamadou</option>
-                    <option value="Mail">Malik</option>
+                    <option value="Malik">Malik</option>
                 </select><br><br>
 
             </div>
@@ -95,7 +95,7 @@
             
         <br>
 
-        <div id="info">
+        <div id="info" class="recup">
     
         </div>
     </section>
